--- a/templates/admin/dashboard.html.twig
+++ b/templates/admin/dashboard.html.twig
@@ -14,7 +14,7 @@
                     <a href="{{ path('list_all_barbers') }}"><button type="button" class="button success_btn">List barbers</button></a>
                     <a href="{{ path('list_without_role') }}"><button type="button" class="button success_btn">List with no roles</button></a>
                     {% if user.isUserIsSuperAdmin %}
-                        <a href="{{ path('procedure_show', {id: user.id}) }}"><button type="button" class="button success_btn">Procedure panel</button></a>
+                        <a href="{{ path('admin_procedures', {id: user.id}) }}"><button type="button" class="button success_btn">Procedure panel</button></a>
                     {% endif %}
                 {% endif %}
 {#                <a href="{{ path('app_logout') }}">Logout</a>#}
