--- a/templates/bundles/TwigBundle/Exception/error403.html.twig
+++ b/templates/bundles/TwigBundle/Exception/error403.html.twig
@@ -40,7 +40,7 @@
                             <i class="fas fa-home"></i> Към началната страница
                         </a>
                         {% if app.user %}
-                            <a href="{{ path('user_edit', {id: app.user.id}) }}" class="btn btn-outline-secondary btn-lg">
+                            <a href="{{ path('profile_edit', {id: app.user.id}) }}" class="btn btn-outline-secondary btn-lg">
                                 <i class="fas fa-user"></i> Към профила
                             </a>
                         {% else %}
